<resources>
    <string name="app_name">Run Boy Run</string>
    <string name="finishedRoute">Route:</string>
    <string name="distance">Distance:</string>
    <string name="date">Date:</string>
    <string name="avgSpeed">AVG Speed:</string>
    <string name="time">Time:</string>
    <string name="distanceNumber"></string>
    <string name="timeNumber" />
    <string name="avgSpeedNumber" />
    <string name="dateNumber" />
    <string name="totalDistance">Total Distance:</string>
    <string name="totalTime">Total Time:</string>
    <string name="totalDistanceNumber" />
    <string name="totalTimeNumber" />
    <string name="totalAvgDistance">Total Average Distance:</string>
    <string name="totalAvgTime">Total Average Time:</string>
    <string name="totalAvgDistanceNumber" />
    <string name="totalAvgTimeNumber" />
    <string name="longestRoute">Longest Route:</string>
    <string name="totalAvgSpeed">Total Average Speed:</string>
    <string name="longestRouteNumber" />
    <string name="totalAvgSpeedNumber" />
</resources>