<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@color/main_background">

    <TextView
        android:id="@+id/finishedRoute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finishedRoute"
        android:layout_marginLeft="4.5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="20dp"
        android:textColor="@color/button_background"
        />

    <LinearLayout
        android:id="@+id/lastRouteLayout1"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        app:layout_constraintTop_toBottomOf="@id/finishedRoute">

        <TextView
            android:id="@+id/date"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/date"
            android:textColor="@color/button_background"
            android:textSize="15dp"
            android:layout_margin="5dp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/dateNumber"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/dateNumber"
            android:textSize="15dp"
            android:textColor="@color/button_background"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/avgSpeed"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/avgSpeed"
            android:textColor="@color/button_background"
            android:textSize="15dp"
            android:layout_margin="5dp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/avgSpeedNumber"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/avgSpeedNumber"
            android:textSize="15dp"
            android:textColor="@color/button_background"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lastRouteLayout2"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        app:layout_constraintTop_toBottomOf="@id/lastRouteLayout1">

        <TextView
            android:id="@+id/distance"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/distance"
            android:textColor="@color/button_background"
            android:textSize="15dp"
            android:layout_margin="5dp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/distanceNumber"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/distanceNumber"
            android:textSize="15dp"
            android:textColor="@color/button_background"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/time"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/time"
            android:textColor="@color/button_background"
            android:textSize="15dp"
            android:layout_margin="5dp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/timeNumber"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/timeNumber"
            android:textSize="15dp"
            android:textColor="@color/button_background"
            android:layout_weight="1"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>